cabal-version:          2.2

name:                   cabal-cache
version:                0.2.0.2
synopsis:               CI Assistant for Haskell projects
description:            CI Assistant for Haskell projects.  Implements package caching.
homepage:               https://github.com/haskell-works/cabal-cache
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky 2019
category:               Development
extra-source-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/cabal-cache

common base                 { build-depends: base                 >= 4.7        && < 5      }

common aeson                { build-depends: aeson                >= 1.4.2.0    && < 1.5    }
common amazonka             { build-depends: amazonka             >= 1.6.1      && < 1.7    }
common amazonka-core        { build-depends: amazonka-core        >= 1.6.1      && < 1.7    }
common amazonka-s3          { build-depends: amazonka-s3          >= 1.6.1      && < 1.7    }
common antiope-core         { build-depends: antiope-core         >= 7.0.0      && < 8      }
common antiope-s3           { build-depends: antiope-s3           >= 7.0.0      && < 8      }
common bytestring           { build-depends: bytestring           >= 0.10.8.2   && < 0.11   }
common conduit-extra        { build-depends: conduit-extra        >= 1.3.1.1    && < 1.4    }
common deepseq              { build-depends: deepseq              >= 1.4.4.0    && < 1.5    }
common directory            { build-depends: directory            >= 1.3.3.0    && < 1.4    }
common exceptions           { build-depends: exceptions           >= 0.10.1     && < 0.11   }
common filepath             { build-depends: filepath             >= 1.3        && < 1.5    }
common generic-lens         { build-depends: generic-lens         >= 1.1.0.0    && < 1.2    }
common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common http-types           { build-depends: http-types           >= 0.12.3     && < 0.13   }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.3    && < 0.2    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
common lens                 { build-depends: lens                 >= 4.17       && < 5      }
common mtl                  { build-depends: mtl                  >= 2.2.2      && < 2.3    }
common optparse-applicative { build-depends: optparse-applicative >= 0.14       && < 0.15   }
common process              { build-depends: process              >= 1.6.5.0    && < 1.7    }
common raw-strings-qq       { build-depends: raw-strings-qq       >= 1.1        && < 2      }
common resourcet            { build-depends: resourcet            >= 1.2.2      && < 1.3    }
common selective            { build-depends: selective            >= 0.1.0      && < 0.2    }
common stringsearch         { build-depends: stringsearch         >= 0.3.6.6    && < 0.4    }
common tar                  { build-depends: tar                  >= 0.5.1.0    && < 0.6    }
common temporary            { build-depends: temporary            >= 1.3        && < 1.4    }
common text                 { build-depends: text                 >= 1.2.3.1    && < 1.3    }
common time                 { build-depends: time                 >= 1.4        && < 1.10   }
common unliftio             { build-depends: unliftio             >= 0.2.10     && < 0.3    }
common zlib                 { build-depends: zlib                 >= 0.6.2      && < 0.7    }

common config
  default-language:     Haskell2010

library
  import: base, config
          , aeson
          , amazonka
          , amazonka-core
          , amazonka-s3
          , antiope-core
          , antiope-s3
          , bytestring
          , conduit-extra
          , deepseq
          , directory
          , exceptions
          , filepath
          , generic-lens
          , http-types
          , lens
          , lens
          , mtl
          , optparse-applicative
          , process
          , resourcet
          , selective
          , stringsearch
          , tar
          , temporary
          , text
          , time
          , unliftio
          , zlib
  other-modules:        Paths_cabal_cache
  autogen-modules:      Paths_cabal_cache
  hs-source-dirs:       src
  exposed-modules:
      App.Commands
      App.Commands.Options.Parser
      App.Commands.Options.Types
      App.Commands.SyncFromArchive
      App.Commands.SyncToArchive
      App.Commands.Version
      App.Static
      HaskellWorks.Ci.Assist.Core
      HaskellWorks.Ci.Assist.IO.Console
      HaskellWorks.Ci.Assist.GhcPkg
      HaskellWorks.Ci.Assist.IO.Error
      HaskellWorks.Ci.Assist.IO.File
      HaskellWorks.Ci.Assist.IO.Lazy
      HaskellWorks.Ci.Assist.IO.Tar
      HaskellWorks.Ci.Assist.Location
      HaskellWorks.Ci.Assist.Options
      HaskellWorks.Ci.Assist.PackageConfig
      HaskellWorks.Ci.Assist.Show
      HaskellWorks.Ci.Assist.Tar
      HaskellWorks.Ci.Assist.Text
      HaskellWorks.Ci.Assist.Types

executable cabal-cache
  import:   base, config
          , optparse-applicative
  build-depends:        cabal-cache
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite cabal-cache-test
  import:   base, config
          , aeson
          , antiope-core
          , antiope-s3
          , bytestring
          , filepath
          , generic-lens
          , hedgehog
          , hspec
          , hw-hedgehog
          , hw-hspec-hedgehog
          , lens
          , raw-strings-qq
          , text
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  build-depends:        cabal-cache
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tools:          hspec-discover
  other-modules:
      HaskellWorks.Assist.AwsSpec
      HaskellWorks.Assist.LocationSpec
      HaskellWorks.Assist.QuerySpec
