cabal-version:          2.2

name:                   cabal-cache
version:                1.0.1.3
synopsis:               CI Assistant for Haskell projects
description:            CI Assistant for Haskell projects.  Implements package caching.
homepage:               https://github.com/haskell-works/cabal-cache
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky 2019
category:               Development
extra-source-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/cabal-cache

common base                           { build-depends: base                           >= 4.7        && < 5      }

common aeson                          { build-depends: aeson                          >= 1.4.2.0    && < 1.5    }
common amazonka                       { build-depends: amazonka                       >= 1.6.1      && < 1.7    }
common amazonka-core                  { build-depends: amazonka-core                  >= 1.6.1      && < 1.7    }
common amazonka-s3                    { build-depends: amazonka-s3                    >= 1.6.1      && < 1.7    }
common antiope-core                   { build-depends: antiope-core                   >= 7.4.4      && < 8      }
common antiope-optparse-applicative   { build-depends: antiope-optparse-applicative   >= 7.4.4      && < 8      }
common antiope-s3                     { build-depends: antiope-s3                     >= 7.4.4      && < 8      }
common bytestring                     { build-depends: bytestring                     >= 0.10.8.2   && < 0.11   }
common conduit-extra                  { build-depends: conduit-extra                  >= 1.3.1.1    && < 1.4    }
common cryptonite                     { build-depends: cryptonite                     >= 0.25       && < 1      }
common containers                     { build-depends: containers                     >= 0.6.0.1    && < 0.7    }
common deepseq                        { build-depends: deepseq                        >= 1.4.4.0    && < 1.5    }
common directory                      { build-depends: directory                      >= 1.3.3.0    && < 1.4    }
common exceptions                     { build-depends: exceptions                     >= 0.10.1     && < 0.11   }
common filepath                       { build-depends: filepath                       >= 1.3        && < 1.5    }
common generic-lens                   { build-depends: generic-lens                   >= 1.1.0.0    && < 1.3    }
common hedgehog                       { build-depends: hedgehog                       >= 1.0        && < 1.1    }
common hspec                          { build-depends: hspec                          >= 2.4        && < 3      }
common http-client                    { build-depends: http-client                    >= 0.5.14     && < 0.7    }
common http-types                     { build-depends: http-types                     >= 0.12.3     && < 0.13   }
common hw-hedgehog                    { build-depends: hw-hedgehog                    >= 0.1.0.3    && < 0.2    }
common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog              >= 0.1.0.4    && < 0.2    }
common lens                           { build-depends: lens                           >= 4.17       && < 5      }
common mtl                            { build-depends: mtl                            >= 2.2.2      && < 2.3    }
common optparse-applicative           { build-depends: optparse-applicative           >= 0.14       && < 0.16   }
common process                        { build-depends: process                        >= 1.6.5.0    && < 1.7    }
common raw-strings-qq                 { build-depends: raw-strings-qq                 >= 1.1        && < 2      }
common relation                       { build-depends: relation                       >= 0.5        && < 0.6    }
common resourcet                      { build-depends: resourcet                      >= 1.2.2      && < 1.3    }
common selective                      { build-depends: selective                      >= 0.1.0      && < 0.2    }
common stm                            { build-depends: stm                            >= 2.5.0.0    && < 3      }
common stringsearch                   { build-depends: stringsearch                   >= 0.3.6.6    && < 0.4    }
common tar                            { build-depends: tar                            >= 0.5.1.0    && < 0.6    }
common temporary                      { build-depends: temporary                      >= 1.3        && < 1.4    }
common text                           { build-depends: text                           >= 1.2.3.1    && < 1.3    }
common time                           { build-depends: time                           >= 1.4        && < 1.10   }
common topograph                      { build-depends: topograph                      >= 1          && < 2      }
common unliftio                       { build-depends: unliftio                       >= 0.2.10     && < 0.3    }
common zlib                           { build-depends: zlib                           >= 0.6.2      && < 0.7    }

common config
  default-language:     Haskell2010
  ghc-options:          -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

library
  import:   base, config
          , aeson
          , amazonka
          , amazonka-core
          , amazonka-s3
          , antiope-core
          , antiope-optparse-applicative
          , antiope-s3
          , bytestring
          , conduit-extra
          , cryptonite
          , containers
          , deepseq
          , directory
          , exceptions
          , filepath
          , generic-lens
          , http-client
          , http-types
          , lens
          , mtl
          , optparse-applicative
          , process
          , relation
          , resourcet
          , selective
          , stm
          , stringsearch
          , tar
          , temporary
          , text
          , time
          , topograph
          , unliftio
          , zlib
  other-modules:        Paths_cabal_cache
  autogen-modules:      Paths_cabal_cache
  hs-source-dirs:       src
  exposed-modules:
      App.Commands
      App.Commands.Options.Parser
      App.Commands.Options.Types
      App.Commands.SyncFromArchive
      App.Commands.SyncToArchive
      App.Commands.Version
      App.Static
      HaskellWorks.CabalCache.AppError
      HaskellWorks.CabalCache.AWS.Env
      HaskellWorks.CabalCache.Concurrent.DownloadQueue
      HaskellWorks.CabalCache.Concurrent.Fork
      HaskellWorks.CabalCache.Concurrent.Type
      HaskellWorks.CabalCache.Core
      HaskellWorks.CabalCache.Error
      HaskellWorks.CabalCache.GhcPkg
      HaskellWorks.CabalCache.Hash
      HaskellWorks.CabalCache.IO.Console
      HaskellWorks.CabalCache.IO.Error
      HaskellWorks.CabalCache.IO.File
      HaskellWorks.CabalCache.IO.Lazy
      HaskellWorks.CabalCache.IO.Tar
      HaskellWorks.CabalCache.Location
      HaskellWorks.CabalCache.Metadata
      HaskellWorks.CabalCache.Options
      HaskellWorks.CabalCache.Show
      HaskellWorks.CabalCache.Text
      HaskellWorks.CabalCache.Topology
      HaskellWorks.CabalCache.Types
      HaskellWorks.CabalCache.Version

executable cabal-cache
  import:   base, config
          , optparse-applicative
  build-depends:        cabal-cache
  main-is:              Main.hs
  hs-source-dirs:       app
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite cabal-cache-test
  import:   base, config
          , aeson
          , antiope-core
          , antiope-s3
          , bytestring
          , containers
          , filepath
          , generic-lens
          , hedgehog
          , hspec
          , http-types
          , hw-hedgehog
          , hw-hspec-hedgehog
          , lens
          , raw-strings-qq
          , relation
          , text

  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  build-depends:        cabal-cache
  hs-source-dirs:       test
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:   hspec-discover:hspec-discover
  other-modules:
      HaskellWorks.CabalCache.AwsSpec
      HaskellWorks.CabalCache.LocationSpec
      HaskellWorks.CabalCache.QuerySpec
