cabal-version:        2.4

name:                   hw-ci-assist
version:                0.1.0.0
synopsis:               CI Assistant for Haskell projects
description:            CI Assistant for Haskell projects.  Implements package caching.
homepage:               https://github.com/haskell-works/hw-ci-assist
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky 2019
category:               Development
extra-source-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-ci-assist

common base                 { build-depends: base                 >= 4.7        && < 5      }

common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.3    && < 0.2    }
common optparse-applicative { build-depends: optparse-applicative >= 0.14       && < 0.15   }

common config
  default-language:     Haskell2010

library
  import:   base, config

executable hw-ci-assist
  import:   base, config
          , optparse-applicative
  build-depends:        hw-ci-assist
  main-is:              Main.hs
  hs-source-dirs:       src

test-suite hw-ci-assist-test
  import:   base, config
          , hedgehog
          , hspec
          , hw-hedgehog
          , hw-hspec-hedgehog
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:    hw-ci-assist
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-tools:      hspec-discover
