cabal-version:        2.4

name:                   hw-ci-assist
version:                0.1.0.0
synopsis:               CI Assistant for Haskell projects
description:            CI Assistant for Haskell projects.  Implements package caching.
homepage:               https://github.com/haskell-works/hw-ci-assist
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              John Ky 2019
category:               Development
extra-source-files:     CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-ci-assist

common base                 { build-depends: base                 >= 4.7        && < 5      }

common aeson                { build-depends: aeson                >= 1.4.2.0    && < 1.5    }
common bytestring           { build-depends: bytestring           >= 0.10.8.2   && < 0.11   }
common directory            { build-depends: directory            >= 1.3.3.0    && < 1.4    }
common generic-lens         { build-depends: generic-lens         >= 1.1.0.0    && < 1.2    }
common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.3    && < 0.2    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
common lens                 { build-depends: lens                 >= 4.17       && < 5      }
common optparse-applicative { build-depends: optparse-applicative >= 0.14       && < 0.15   }
common raw-strings-qq       { build-depends: raw-strings-qq       >= 1.1        && < 2      }
common tar                  { build-depends: tar                  >= 0.5.1.0    && < 0.6    }
common text                 { build-depends: text                 >= 1.2.3.1    && < 1.3    }
common zlib                 { build-depends: zlib                 >= 0.6.2      && < 0.7    }

common config
  default-language:     Haskell2010

library
  import:   base, config
          , aeson
          , generic-lens
          , lens
          , text
  exposed-modules:      HaskellWorks.Ci.Assist.Core
                        HaskellWorks.Ci.Assist.Types
  hs-source-dirs:       src

executable hw-ci-assist
  import:   base, config
          , aeson
          , bytestring
          , directory
          , generic-lens
          , lens
          , optparse-applicative
          , tar
          , text
          , zlib
  build-depends:        hw-ci-assist
  main-is:              Main.hs
  hs-source-dirs:       app
  other-modules:        App.Commands
                        App.Commands.Options.Types
                        App.Commands.SyncFromArchive
                        App.Commands.SyncToArchive
                        App.Static

test-suite hw-ci-assist-test
  import:   base, config
          , aeson
          , bytestring
          , generic-lens
          , hedgehog
          , hspec
          , hw-hedgehog
          , hw-hspec-hedgehog
          , lens
          , raw-strings-qq
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:    hw-ci-assist
  other-modules:    HaskellWorks.Assist.QuerySpec
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-tools:      hspec-discover
